# wikiwonder

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  conftest.py  docker-compose.yml  fly.toml  main.py  next.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.tsbuildinfo
.github/workflows/: django.yml  nextjs.yml
apps/ai/: admin.py  apps.py  models.py  page_context.py  quota.py  ratelimit.py  services.py  urls.py  views.py
apps/cms_extensions/: apps.py  cms_plugins.py
apps/imports/: apps.py  export.py  formats.py  services.py  url_import.py  urls.py  views.py  wikipedia_metadata.py
apps/mcp/: apps.py  server.py  urls.py  views.py
apps/previews/: apps.py  services.py  urls.py  views.py
apps/search/: apps.py  services.py  urls.py  views.py
apps/seo/: apps.py  services.py  signals.py  sitemaps.py  views.py
apps/wiki/: admin.py  api_urls.py  apps.py  context_processors.py  feeds.py  i18n_helpers.py  middleware.py  models.py  permissions.py  serializers.py  sitemaps.py  translation.py  urls.py  views.py  views_annotations.py  views_create.py  views_edit.py  views_export.py  views_import.py  views_sharing.py  views_suggest.py  views_taxonomy.py  views_translate.py  views_upload.py
config/: health.py  media_urls.py  settings.py  settings_test.py  urls.py
docs/: ACTIVITY_LOG.md
infra/: README.md
infra/docker/: entrypoint.sh
infra/nginx/: Dockerfile  docker-entrypoint.sh  nginx.conf
infra/varnish/: default.vcl
prisma/: schema.prisma
public/: manifest.json  sw.js
scripts/: certbot-init.ps1  certbot-init.sh  certbot-renew.sh
src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/lib/: ai.ts  auth.ts  import.ts  utils.ts  (+4 more)
templates/: base.html
tests/: test_ai.py  test_ai_page.py  test_create_get.py  test_lara_translate.py  test_link_graph.py  test_media_previews.py  test_search.py  test_sharing_i18n.py  test_taxonomy_bookmarks.py  test_url_import.py  test_wiki.py  test_wiki_create.py  test_wiki_editor.py  test_wiki_features.py  test_wikilinks.py  test_wikipedia_diagrams.py  test_wikipedia_import.py  test_wikipedia_paste.py
(+140 files in other folders)
