[project]
name = "wikiwonder"
version = "0.1.0"
description = "Self-hosted Wikipedia with AI import, CMS, PWA, and offline support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6",
    "djangorestframework>=3.15",
    "django-markdownx>=4.0",
    "django-pwa>=2.0",
    "django-import-export>=4.0",
    "django-tailwind>=3.8",
    "django-widget-tweaks>=1.5",
    "django-user-agents>=0.4",
    "django-imagekit>=5.0",
    "django-environ>=0.11",
    "django-cors-headers>=4.6",
    "markdown>=3.7",
    "bleach>=6.2",
    "psycopg[binary]>=3.2",
    "gunicorn>=23.0",
    "whitenoise>=6.8",
    "cerebras-cloud-sdk>=1.0",
    "pillow>=11.0",
    "feedparser>=6.0",
    "python-slugify>=8.0",
    "django-cotton>=2.7.2",
    "django-allauth>=65.18.0",
    "django-cms>=5.0.8",
    "djangocms-admin-style>=3.3.1",
    "djangocms-text-ckeditor>=5.1.7",
    "django-treebeard>=5.3.0",
    "django-classy-tags>=4.1.0",
    "django-sekizai>=4.1.0",
    "django-filer>=3.4.4",
    "easy-thumbnails>=2.10.1",
    "django-polymorphic>=4.11.5",
    "html5lib>=1.1",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
    "pypdf>=6.14.2",
    "pygments>=2.20.0",
    "django-modeltranslation>=0.20.3",
    "django-rosetta>=0.10.3",
    "django-i18nfield>=1.11.0",
    "django-localflavor>=5.0",
    "django-meta>=2.5.1",
    "django-check-seo>=2.1.1",
    "beautifulsoup4>=4.15.0",
    "html2text>=2025.4.15",
    "lara-sdk>=1.11.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-django>=4.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps", "config"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings_test"
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "config"]
